<resources>
    <string name="app_name">VHODO</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="vhodo_title">VHOD.A</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="account">Account</string>
    <string name="report">Report a problem</string>
    <string name="contact_neighbour">Contact a neighbour</string>
    <string name="contact_mechanic">Contact a mechanic</string>
    <string name="about">About</string>
    <string name="logout">Log out</string>
    <string name="problem_hint">Describe the problem here.</string>
    <string name="action_settings">Settings</string>
    <string name="take_picture">Take a picture</string>
    <string name="send_problem">Send problem</string>
    <string name="debt_button">Debts</string>
    <string name="payment_button">Payments</string>
    <string name="balance_button">Balance</string>
    <string name="landlord_button">Landlord</string>
    <string name="login">Login</string>
    <string name="signup">Sign up</string>
    <string name="problemBackgroundColor">#FF919C</string>
    <string name="messageBackgroundColor">#d1d7ff</string>
    <string name="messageAlertBackgroundColor">#FBFFB5</string>
    <string name="callButton">Call</string>

</resources>
