<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_account"
            android:icon="@mipmap/ic_account_box_black_24dp"
            android:title="@string/account" />
        <item
            android:id="@+id/nav_neighbour"
            android:icon="@mipmap/ic_face_black_24dp"
            android:title="@string/contact_neighbour" />
        <item
            android:id="@+id/nav_mechanic"
            android:icon="@mipmap/ic_build_black_24dp"
            android:title="@string/contact_mechanic" />
        <item
            android:id="@+id/nav_report"
            android:icon="@mipmap/ic_warning_black_24dp"
            android:title="@string/report" />
        <item
            android:id="@+id/nav_aboutinfo"
            android:icon="@mipmap/ic_info_outline_black_24dp"
            android:title="@string/about" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@mipmap/ic_lock_open_black_24dp"
            android:title="@string/logout" />
</group>
</menu>
